crates/murphy-plugin-macros/tests/ui/fail_node_pattern_unsupported_kind.stderr
error: node_pattern!: node kind `rescue` is not supported by node_pattern! in v1 — see follow-up issue
 --> tests/ui/fail_node_pattern_unsupported_kind.rs:4:1
  |
4 | murphy_plugin_macros::node_pattern!(m, "(rescue _ _ _)");
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `murphy_plugin_macros::node_pattern` (in Nightly builds, run with -Z macro-backtrace for more info)
